fixed spacing on project detail and contact sections

--- a/src/styles/screens/About.css
+++ b/src/styles/screens/About.css
@@ -1,5 +1,5 @@
 .about-container {
-  height: 110vh;
+  height: 120vh;
   display: grid;
   grid-template-areas:
     "A1"
